fixing alignmrnt of filters for nav

--- a/assets/scss/layouts/blog/_blog.scss
+++ b/assets/scss/layouts/blog/_blog.scss
@@ -460,12 +460,10 @@
                 margin-bottom: 0;
                 padding-top: 15px;
                 position: relative;
-                text-align: center;
 
                 @include breakpoint("small") {
                     font-size: 20px;
                     padding-top: 25px;
-                    text-align: left;
                 }
 
                 &::-webkit-details-marker {
@@ -493,11 +491,11 @@
 
             ul {
                 list-style-type: none;
-                margin: 10px auto;
+                margin: 10px 0;
                 width: fit-content;
 
                 @include breakpoint("small") {
-                    margin: 20px auto;
+                    margin: 20px 0;
                     width: auto;
                 }
 
